--- a/README.adoc
+++ b/README.adoc
@@ -37,13 +37,13 @@ Considérons trois éléments :
 
 Dans la classe principale, il est possible d'injecter trois types de données contextuelles :
 
-- [`org.neo4j.graphdb.GraphDatabaseService`](https://neo4j.com/docs/java-reference/current/javadocs/org/neo4j/graphdb/GraphDatabaseService.html) : permet d'accéder au graphe Neo4j par le service interne qui lui est dédié
+- link:https://neo4j.com/docs/java-reference/current/javadocs/org/neo4j/graphdb/GraphDatabaseService.html[`org.neo4j.graphdb.GraphDatabaseService`] : permet d'accéder au graphe Neo4j par le service interne qui lui est dédié
 
-- [`org.neo4j.logging.Log`](https://neo4j.com/docs/java-reference/current/javadocs/org/neo4j/logging/Log.html) : permet d'accéder au service de journalisation général de Neo4j (neo4j.log)
+- link:https://neo4j.com/docs/java-reference/current/javadocs/org/neo4j/logging/Log.html[`org.neo4j.logging.Log`] : permet d'accéder au service de journalisation général de Neo4j (neo4j.log)
 
-- [`org.neo4j.procedure.TerminationGuard`](https://neo4j.com/docs/java-reference/current/javadocs/org/neo4j/procedure/TerminationGuard.html) : particulièrement utile sur une procédure dont le temps d'exécution est long, ce service va vérifier que la requête parente (celle qui a initié la procédure, ou encore la transaction) n'a pas été interrompue par l'utilisateur ou n'a pas dépassé le temps d'exécution maximal (timeout)    
+- link:https://neo4j.com/docs/java-reference/current/javadocs/org/neo4j/procedure/TerminationGuard.html[`org.neo4j.procedure.TerminationGuard`] : particulièrement utile sur une procédure dont le temps d'exécution est long, ce service va vérifier que la requête parente (celle qui a initié la procédure, ou encore la transaction) n'a pas été interrompue par l'utilisateur ou n'a pas dépassé le temps d'exécution maximal (timeout)    
  
-Ces propriétés doivent-être injectées avec l'annotation [`@Context`](https://neo4j.com/docs/java-reference/current/javadocs/org/neo4j/procedure/Context.html), elles doivent-être déclarées publiques et ne doivent pas être ni statiques, ni finales.
+Ces propriétés doivent-être injectées avec l'annotation link:https://neo4j.com/docs/java-reference/current/javadocs/org/neo4j/procedure/Context.html[`@Context`], elles doivent-être déclarées publiques et ne doivent pas être ni statiques, ni finales.
  
 ```
  @Context
@@ -92,7 +92,7 @@ La méthode annotée par `@Procedure` doit respecter les règles suivantes :
 
 - Retourner un `java.util.stream.Stream<T>` où T correspond à la classe portant les propriétés retournées par l'instruction `YIELD`
 
-- Chaque paramètre d'entrée de la méthode doit-être prefixé de l'annotation [`@Name`](https://neo4j.com/docs/java-reference/current/javadocs/org/neo4j/procedure/Name.html) 
+- Chaque paramètre d'entrée de la méthode doit-être prefixé de l'annotation link:https://neo4j.com/docs/java-reference/current/javadocs/org/neo4j/procedure/Name.html[`@Name`] 
 
 S'il faut lever une exception dans la procédure, elle doit-être de type `java.lang.RuntimeException` ou étendre celle-ci. 
 
@@ -111,7 +111,7 @@ Cette classe va servir à exporter les résultats produits par la procédure dan
 
 Chacune des propriétés qui la compose sera accessible dans la requête Cypher grâce à l'instruction `YIELD` suivi du nom de la propriété.
 
-Chacune des propriétés qui la compose doit-être publique et non finale
+Chacune des propriétés qui la compose doit-être publique et non finale.
 
 Exemple d'appel : 
 `CALL srosoft.findByLabel('MyLabel') YIELD node RETURN node`
@@ -128,11 +128,11 @@ public class YieldClass{
 
 == Ecrire le test
 
-Le projet Neo4j [harness](https://github.com/neo4j/neo4j/tree/3.5/community/neo4j-harness/) fournit un set de classes pour JUnit permettant de tester des développements Neo4j sans pour autant lever de serveur à l'extérieur de l'environnement de test.
+Le projet Neo4j link:https://github.com/neo4j/neo4j/tree/3.5/community/neo4j-harness/[harness] fournit un set de classes pour JUnit permettant de tester des développements Neo4j sans pour autant lever de serveur à l'extérieur de l'environnement de test.
 
 Les règles JUnit, matérialisées par l'annotation `@Rule` permettent de regrouper des traitements pré et post tests.
 
-La règle `org.neo4j.harness.junit.Neo4jRule` fournie par le projet [harness](https://github.com/neo4j/neo4j/tree/3.5/community/neo4j-harness/) va nous permettre de configurer un environnement serveur Neo4j pré-chargé et lancé sur un port aléatoire. Cet environnement sera détruit à l'issu des tests.
+La règle `org.neo4j.harness.junit.Neo4jRule` fournie par le projet link:https://github.com/neo4j/neo4j/tree/3.5/community/neo4j-harness/[harness] va nous permettre de configurer un environnement serveur Neo4j pré-chargé et lancé sur un port aléatoire. Cet environnement sera détruit à l'issu des tests.
 
 Voici un exemple de configuration :
  
